--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,10 +6,10 @@ jobs:
  build:
   runs-on: ubuntu-latest
    steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - uses: actions/setup-go@v3
       with:
       go-version: '1.18'
-      cache: true
-    - run: go run hello.go
+      
+    - run: go build
     
