--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,14 @@
-on: push
-
-name: Integration
-
+name: learn-github-actions
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
 jobs:
-  build:
+  check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          go-version: '1.18'      
-      - run: |
-          go build
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
     
